Fixing visibility of footer for overflowing page content

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 65px;
+}
+
 footer {
   background-color: $dark-bg-color;
   color: $light-font-color;
